@@ -2,6 +2,8 @@
 # $Id$
 mm-dd-yy - Version 5.1.40
 
+  - Fix for Bug#22750465, CONNECTOR/J HANGS WHEN FABRIC NODE IS DOWN.
+
   - Fix for Bug#82094 (23738636), ConcurrentModificationException on Fabric connections after topology changes.
 
   - Fix for Bug#82115 (23743956), Some exceptions are intercepted twice or fail to set the init cause.
